[package]
name = "conllu-utils"
version = "0.1.4"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Utilities for working with the CoNLL-U dependency format"
documentation = "https://github.com/danieldk/conllu-utils"
repository = "https://github.com/danieldk/conllu-utils.git"
license = "Apache-2.0"
readme = "README.md"
exclude = [
  ".gitignore",
  ".github/",
  "shell.nix"
]

[[bin]]
name = "conllu"
path = "src/main.rs"

[dependencies]
clap = "2"
colored = "1"
conllu = "0.3.1"
failure = "0.1"
flate2 = "1"
itertools = "0.9"
stdinout = "0.4"
rand = "0.7"
rand_xorshift = "0.2"
unicode_categories = "0.1"
unicode-normalization = "0.1"
